Fixed large images going out of bounds on modal view, fixed the animation on image load

--- a/css/sateekStyles.css
+++ b/css/sateekStyles.css
@@ -183,8 +183,9 @@
 }
 
 .expandedImageModal img {
-    width: 80%;
-    display: block;
+    max-width: 80%;
+    max-height: 80%;
+    display: none;
     
 }
 
